# gentle-ai

./: AGENTS.md  Makefile  README.md
docs/: kiro.md  sdd-ecosystem.md  sdd-profiles-domain-model.md
e2e/: e2e_test.sh
internal/agentbuilder/: engine.go  installer.go  registry.go
internal/agents/gemini/: adapter.go
internal/app/: app.go  app_test.go  help.go  help_test.go
internal/assets/: assets_test.go
internal/catalog/: skills.go  skills_test.go
internal/cli/: install_test.go  run.go  run_engram_download_test.go  sdd_config.go  sdd_config_test.go  sync.go  sync_test.go  validate.go
internal/components/: golden_test.go
internal/etl/: compare.go  compare_test.go  header.go  header_test.go  pattern.go  pattern_test.go  sidecar.go  sidecar_test.go  tasks.go  tasks_test.go
internal/installcmd/: resolver.go  resolver_test.go
internal/model/: selection.go  selection_test.go  types.go  types_test.go
internal/opencode/: models.go  models_test.go
internal/sddconfig/: config.go  config_test.go  detect.go  detect_test.go  profiles.go  profiles_test.go  repos.go  repos_test.go
internal/system/: detect.go
internal/tui/: agent_builder_nav_test.go  model.go  model_test.go  router.go
openspec/: config.yaml
skills/data-engineer-create-table/: SKILL.md
skills/data-engineer-etl-glue/: SKILL.md
skills/data-engineer-etl-s3/: SKILL.md
skills/data-engineer-etl-sharepoint/: SKILL.md
skills/data-engineer-integrate/: SKILL.md
toyota-chile-etl-template/: .gitignore  Makefile  README.md  requirements.txt
toyota-chile-etl-template/scripts/: pyproject.toml
(+104 files in other folders)
