[project]
name = "toyota-chile-etl-scripts"
version = "0.1.0"
description = "Utility scripts for Toyota Chile ETL pipeline"
requires-python = ">=3.11"

dependencies = [
    "boto3>=1.28.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"